--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,16 @@ msal
 Flask==3.0.3
 gunicorn
 Werkzeug==3.0.4
-azure-functions
-promptflow
-promptflow-tools
 
+azure-functions
 azure-search-documents==11.4.0
 azure-identity
+azure-cosmos
+
 langchain
 langchain-openai
 langchain-community
+
+promptflow
+promptflow-tools
+promptflow[azure]
